--- a/Pipfile
+++ b/Pipfile
@@ -1,14 +1,15 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-ipdb = "*"
-faker = "*"
-pytest = "7.1.3"
 
 [dev-packages]
 
+[packages]
+tabulate = "*"
+pytest = "==7.1.3"
+ipdb = "*"
+faker = "*"
+
 [requires]
-python_version = "3.8.13"
+python_version = "3.8"
